possible padding fix

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 		<link rel="stylesheet" href="style.css"/>
 	</head>
 	<body>
+	<div>
 		<img 
 src="https://i.pinimg.com/originals/e1/bb/8a/e1bb8ab1d0650b8b639ed5be407a4f0e.png">
+	</div>
 		<h1>Zachery Sheley</h1>
 		<p>Coder Dude</p>
 		<p>Will code for food</p>
