--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@ src="https://i.pinimg.com/originals/e1/bb/8a/e1bb8ab1d0650b8b639ed5be407a4f0e.pn
 		<h1>Zachery Sheley</h1>
 		<p>Coder Dude</p>
 		<p>Will code for food</p>
+		<center><button class="button button1">Profile</button>
 	</body>
 </html>
