--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@ src="https://i.pinimg.com/originals/e1/bb/8a/e1bb8ab1d0650b8b639ed5be407a4f0e.pn
 		<p>Coder Dude</p>
 		<p>Will code for food</p>
 		<center><button class="button button1" 
-onclick="http://galaxyrocket.me/profile">Profile</button>
+onclick="location.href='http://galaxyrocket.me/profile';">Profile</button>
 	</body>
 </html>
