--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ src="https://i.pinimg.com/originals/e1/bb/8a/e1bb8ab1d0650b8b639ed5be407a4f0e.pn
 		<h1>Zachery Sheley</h1>
 		<p>Coder Dude</p>
 		<p>Will code for food</p>
-		<p> CLICK -->  <center><button class="button button1" class="btn 
+		<p> CLICK -->  <button class="button button1" class="btn 
 btn-success" 
 onclick="location.href='http://galaxyrocket.me/profile';">Profile</button>  <-- 
 CLICK</p>
